tests/ui/associated-types/bound-lifetime-in-return-only.elision.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/bound-lifetime-in-return-only.rs:34:23
   |
LL | fn elision(_: fn() -> &i32) {
   |                       ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
   |
LL | fn elision(_: fn() -> &'static i32) {
   |                        +++++++
help: instead, you are more likely to want to return an owned value
   |
LL - fn elision(_: fn() -> &i32) {
LL + fn elision(_: fn() -> i32) {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
